Add code in python and templates to show data on pages. Add context_processors.py for 'base.html'

--- a/tours/templates/tours/departure.html
+++ b/tours/templates/tours/departure.html
@@ -2,7 +2,7 @@
 {% block main %}
   <main class="container mt-3">
     <h1 class="display-5 mt-4">Летим {{ departure_name }}</h1>
-    <p class="mb-4">Найдено {{ filtered_tours|length }} туров, от {{ min_price }} до {{ max_price }} и от {{ min_nights }} ночей до
+    <p class="mb-4">Найдено {{ filtered_tours|length }} тура, от {{ min_price }} до {{ max_price }} и от {{ min_nights }} ночей до
       {{ max_nights }} ночей</p>
     <!-- CARDS -->
     <div class="row mt-5">
